[package]
name = "compiler"
version = "0.1.0"
authors = ["Dmitry <mamhigtt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.7", features = ["serde", "v4"] }
juniper = "0.14.2"
tungstenite = "0.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.55"
llvm-sys = "100"
log = "0.4.8"
traversal = "0.1.2"
libc = "0.2.80"
