[package]
name = "compiler"
version = "0.1.0"
authors = ["Dmitry <mamhigtt@gmail.com>"]
edition = "2018"

[dependencies]
lalrpop-util = "0.19.0"
regex = "1"
uuid = { version = "0.7", features = ["serde", "v4"] }
tungstenite = "0.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.55"
llvm-sys = "100"
log = "0.4.8"
traversal = "0.1.2"
libc = "0.2.80"
clap = "2.33.3"

[build-dependencies]
lalrpop = { version = "0.19.0", features = ["lexer"] }

[profile.dev.build-override]
opt-level = 3